[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "endstone-jwtpa"
version = "1.0.0"
description = "JWTpa - Teleport request (TPA) plugin for EndstoneMC servers"
readme = "README.md"
license = "MIT"
authors = [{ name = "JWDev" }]
requires-python = ">=3.12"
dependencies = ["endstone>=0.10.0", "aiosqlite>=0.20.0", "pyyaml>=6.0"]

[project.entry-points."endstone"]
jwtpa = "jwtpa.main:JWTpa"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jwtpa = ["resources/*.yml"]
